--- a/plantilla/src/index.html
+++ b/plantilla/src/index.html
@@ -2,32 +2,43 @@
 <html lang="en">
 
 <head>
-   <!-- 
+   <!-- basic -->
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <!-- mobile metas -->
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
+   <!-- site metas -->
    <title>HomeCare</title>
    <meta name="keywords" content="">
    <meta name="description" content="">
    <meta name="author" content="">
-   <link rel="stylesheet" href="css/bootstrap.min.css">
-   <link rel="stylesheet" href="css/responsive.css">
-   <link rel="icon" href="images/fevicon.png" type="image/gif" />
-   <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
+   <!-- bootstrap css -->
+   <link rel="stylesheet" href="/plantilla/src/theme/css/bootstrap.min.css">
+   <!-- style css -->
+   <link rel="stylesheet" href="/plantilla/src/theme/css/style.css">
+   <!-- Responsive-->
+   <link rel="stylesheet" href="/plantilla/src/theme/css/responsive.css">
+   <!-- fevicon -->
+   <link rel="icon" href="/plantilla/src/images/fevicon.png" type="image/gif"/>
+   <!-- Scrollbar Custom CSS -->
+   <link rel="stylesheet" href="/plantilla/src/theme/css/jquery.mCustomScrollbar.min.css">
+   <!-- Tweaks for older IEs-->
    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
-   <link rel="stylesheet" href="css/owl.carousel.min.css">
-   <link rel="stylesheet" href="css/owl.theme.default.min.css">
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
-   -->
+   <!-- owl stylesheets -->
+   <link rel="stylesheet" href="/plantilla/src/theme/css/owl.carousel.min.css">
+   <link rel="stylesheet" href="/plantilla/src/theme/css/owl.theme.default.min.css">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css"
+      media="screen">
 </head>
 
 <body>
    <!-- header section start -->
    <div class="header_section">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-         <div class="logo"><a href="index.html"><img src="images/logo.png"></a></div>
-         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+         <div class="logo"><a href="index.html"><img src="/plantilla/src/images/fevicon.png"></a></div>
+         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
          </button>
          <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -131,7 +142,8 @@
    <div class="health_section layout_padding">
       <div class="container">
          <h1 class="health_taital">Best Of Health care for you</h1>
-         <p class="health_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis</p>
+         <p class="health_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis</p>
          <div class="health_section layout_padding">
             <div class="row">
                <div class="col-sm-7">
@@ -166,7 +178,8 @@
          <div class="knowledge_main">
             <div class="left_main">
                <h1 class="knowledge_taital">Knowledge of center</h1>
-               <p class="knowledge_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+               <p class="knowledge_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                  incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
             </div>
             <div class="right_main">
                <div class="play_icon"><a href="#"><img src="images/play-icon.png"></a></div>
@@ -254,7 +267,9 @@
                      </div>
                      <div class="client_right">
                         <h3 class="distracted_text">Distracted by</h3>
-                        <p class="lorem_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
+                        <p class="lorem_text">It is a long established fact that a reader will be distracted by the
+                           readable content of a page when looking at its layout. The point of using Lorem Ipsum is that
+                           it has a more-or-less normal distribution of letters</p>
                         <div class="quote_icon"><img src="images/quote-icon.png"></div>
                      </div>
                   </div>
@@ -270,7 +285,9 @@
                      </div>
                      <div class="client_right">
                         <h3 class="distracted_text">Distracted by</h3>
-                        <p class="lorem_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
+                        <p class="lorem_text">It is a long established fact that a reader will be distracted by the
+                           readable content of a page when looking at its layout. The point of using Lorem Ipsum is that
+                           it has a more-or-less normal distribution of letters</p>
                         <div class="quote_icon"><img src="images/quote-icon.png"></div>
                      </div>
                   </div>
@@ -286,7 +303,9 @@
                      </div>
                      <div class="client_right">
                         <h3 class="distracted_text">Distracted by</h3>
-                        <p class="lorem_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
+                        <p class="lorem_text">It is a long established fact that a reader will be distracted by the
+                           readable content of a page when looking at its layout. The point of using Lorem Ipsum is that
+                           it has a more-or-less normal distribution of letters</p>
                         <div class="quote_icon"><img src="images/quote-icon.png"></div>
                      </div>
                   </div>
@@ -309,17 +328,22 @@
             <div class="col-lg-3 col-sm-6">
                <div class="footer_logo"><a href="index.html"><img src="images/footer-logo.png"></a></div>
                <h1 class="adderss_text">Contact Us</h1>
-               <div class="map_icon"><img src="images/map-icon.png"><span class="paddlin_left_0">Page when looking at its</span></div>
-               <div class="map_icon"><img src="images/call-icon.png"><span class="paddlin_left_0">+7586656566</span></div>
-               <div class="map_icon"><img src="images/mail-icon.png"><span class="paddlin_left_0">volim@gmail.com</span></div>
+               <div class="map_icon"><img src="images/map-icon.png"><span class="paddlin_left_0">Page when looking at
+                     its</span></div>
+               <div class="map_icon"><img src="images/call-icon.png"><span class="paddlin_left_0">+7586656566</span>
+               </div>
+               <div class="map_icon"><img src="images/mail-icon.png"><span class="paddlin_left_0">volim@gmail.com</span>
+               </div>
             </div>
             <div class="col-lg-3 col-sm-6">
                <h1 class="adderss_text">Doctors</h1>
-               <div class="hiphop_text_1">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour,</div>
+               <div class="hiphop_text_1">There are many variations of passages of Lorem Ipsum available, but the
+                  majority have suffered alteration in some form, by injected humour,</div>
             </div>
             <div class="col-lg-3 col-sm-6">
                <h1 class="adderss_text">Useful Links</h1>
-               <div class="Useful_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered ,</div>
+               <div class="Useful_text">There are many variations of passages of Lorem Ipsum available, but the majority
+                  have suffered ,</div>
             </div>
             <div class="col-lg-3 col-sm-6">
                <h1 class="adderss_text">Newsletter</h1>
@@ -341,12 +365,23 @@
    <!-- copyright section start -->
    <div class="copyright_section">
       <div class="container">
-         <p class="copyright_text">2019 All Rights Reserved. Design by <a href="https://html.design">Free html Templates</a></p>
+         <p class="copyright_text">2019 All Rights Reserved. Design by <a href="https://html.design">Free html
+               Templates</a></p>
       </div>
    </div>
    <!-- copyright section end -->
    <!-- Javascript files-->
-
+   <script src="js/jquery.min.js"></script>
+   <script src="js/popper.min.js"></script>
+   <script src="js/bootstrap.bundle.min.js"></script>
+   <script src="js/jquery-3.0.0.min.js"></script>
+   <script src="js/plugin.js"></script>
+   <!-- sidebar -->
+   <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
+   <script src="js/custom.js"></script>
+   <!-- javascript -->
+   <script src="js/owl.carousel.js"></script>
+   <script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
 </body>
 
 </html>
