--- a/plantilla/src/index.html
+++ b/plantilla/src/index.html
@@ -20,7 +20,7 @@
    <!-- Responsive-->
    <link rel="stylesheet" href="css/responsive.css">
    <!-- fevicon -->
-   <link rel="icon" href="images/fevicon.png" type="image/gif" />
+   <link rel="icon" href="../../images/fevicon.png" type="image/gif" />
    <!-- Scrollbar Custom CSS -->
    <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
    <!-- Tweaks for older IEs-->
@@ -35,7 +35,7 @@
    <!-- header section start -->
    <div class="header_section">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-         <div class="logo"><a href="index.html"><img src="images/logo.png"></a></div>
+         <div class="logo"><a href="index.html"><img src="../../images/logo.png"></a></div>
          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
          </button>
@@ -60,7 +60,7 @@
                   <a class="nav-link" href="contact.html">Contact Us</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="#"><img src="images/search-icon.png"></a>
+                  <a class="nav-link" href="#"><img src="../../images/search-icon.png"></a>
                </li>
             </ul>
          </div>
@@ -82,7 +82,7 @@
                            </div>
                         </div>
                         <div class="col-md-6">
-                           <div class="image_1"><img src="images/img-1.png"></div>
+                           <div class="image_1"><img src="../../images/img-1.png"></div>
                         </div>
                      </div>
                   </div>
@@ -101,7 +101,7 @@
                            </div>
                         </div>
                         <div class="col-md-6">
-                           <div class="image_1"><img src="images/img-1.png"></div>
+                           <div class="image_1"><img src="../../images/img-1.png"></div>
                         </div>
                      </div>
                   </div>
@@ -120,7 +120,7 @@
                            </div>
                         </div>
                         <div class="col-md-6">
-                           <div class="image_1"><img src="images/img-1.png"></div>
+                           <div class="image_1"><img src="../../images/img-1.png"></div>
                         </div>
                      </div>
                   </div>
@@ -146,25 +146,25 @@
                <div class="col-sm-7">
                   <div class="image_main">
                      <div class="main">
-                        <img src="images/img-2.png" alt="Avatar" class="image" style="width:100%">
+                        <img src="../../images/img-2.png" alt="Avatar" class="image" style="width:100%">
                      </div>
                      <div class="middle">
-                        <div class="text"><img src="images/icon-1.png" style="width: 40px;"></div>
+                        <div class="text"><img src="../../images/icon-1.png" style="width: 40px;"></div>
                      </div>
                   </div>
                </div>
                <div class="col-sm-5">
                   <div class="image_main_1">
                      <div class="main">
-                        <img src="images/img-3.png" alt="Avatar" class="image" style="width:100%">
+                        <img src="../../images/img-3.png" alt="Avatar" class="image" style="width:100%">
                      </div>
                      <div class="middle">
-                        <div class="text"><img src="images/icon-1.png" style="width: 40px;"></div>
+                        <div class="text"><img src="../../images/icon-1.png" style="width: 40px;"></div>
                      </div>
                   </div>
                </div>
             </div>
-            <div class="getquote_bt_1"><a href="#">Read More <span><img src="images/right-arrow.png"></span></a></div>
+            <div class="getquote_bt_1"><a href="#">Read More <span><img src="../../images/right-arrow.png"></span></a></div>
          </div>
       </div>
    </div>
@@ -178,7 +178,7 @@
                <p class="knowledge_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
             </div>
             <div class="right_main">
-               <div class="play_icon"><a href="#"><img src="images/play-icon.png"></a></div>
+               <div class="play_icon"><a href="#"><img src="../../images/play-icon.png"></a></div>
             </div>
          </div>
       </div>
@@ -193,19 +193,19 @@
             <div class="row">
                <div class="col-lg-4 col-sm-6">
                   <div class="box_main">
-                     <div class="icon_1"><img src="images/icon-2.png"></div>
+                     <div class="icon_1"><img src="../../images/icon-2.png"></div>
                      <h4 class="daily_text">Daily care experts</h4>
                   </div>
                </div>
                <div class="col-lg-4 col-sm-6">
                   <div class="box_main active">
-                     <div class="icon_1"><img src="images/icon-3.png"></div>
+                     <div class="icon_1"><img src="../../images/icon-3.png"></div>
                      <h4 class="daily_text_1">Available 24/7</h4>
                   </div>
                </div>
                <div class="col-lg-4 col-sm-6">
                   <div class="box_main">
-                     <div class="icon_1"><img src="images/icon-4.png"></div>
+                     <div class="icon_1"><img src="../../images/icon-4.png"></div>
                      <h4 class="daily_text_1">Balanced care</h4>
                   </div>
                </div>
@@ -336,10 +336,10 @@
                <div class="subscribe_bt"><a href="#">Subscribe</a></div>
                <div class="social_icon">
                   <ul>
-                     <li><a href="#"><img src="images/fb-icon.png"></a></li>
-                     <li><a href="#"><img src="images/twitter-icon.png"></a></li>
-                     <li><a href="#"><img src="images/linkedin-icon.png"></a></li>
-                     <li><a href="#"><img src="images/instagram-icon.png"></a></li>
+                     <li><a href="#"><img src="../../images/fb-icon.png"></a></li>
+                     <li><a href="#"><img src="../../images/twitter-icon.png"></a></li>
+                     <li><a href="#"><img src="../../images/linkedin-icon.png"></a></li>
+                     <li><a href="#"><img src="../../images/instagram-icon.png"></a></li>
                   </ul>
                </div>
             </div>
